Included ErrorResponse for API and slf4j