@@ -3,16 +3,15 @@ package com.springboot.RailwayTicket.service;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 import java.util.stream.IntStream;
 
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.beans.factory.annotation.Qualifier;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 
 import com.springboot.RailwayTicket.dao.BookingDao;
-import com.springboot.RailwayTicket.dao.PassengersDao;
 import com.springboot.RailwayTicket.dao.TicketDao;
 import com.springboot.RailwayTicket.dao.TrainDao;
 import com.springboot.RailwayTicket.entity.Booking;
@@ -20,16 +19,18 @@ import com.springboot.RailwayTicket.entity.Passenger;
 import com.springboot.RailwayTicket.entity.Ticket;
 import com.springboot.RailwayTicket.entity.Train;
 import com.springboot.RailwayTicket.entity.UserProfile;
+import com.springboot.RailwayTicket.excption.RailwayException;
 import com.springboot.RailwayTicket.model.BookingModel;
 import com.springboot.RailwayTicket.model.BookingRequestModel;
 import com.springboot.RailwayTicket.model.TrainModel;
 import com.springboot.RailwayTicket.utils.RailwayTicketUtils;
 
-import jakarta.persistence.EntityNotFoundException;
 import jakarta.transaction.Transactional;
+import lombok.extern.slf4j.Slf4j;
 
 @Service
 @Transactional
+@Slf4j
 public class BookingServiceImpl implements BookingService {
 
 	@Autowired
@@ -42,88 +43,69 @@ public class BookingServiceImpl implements BookingService {
 	private TicketDao ticketDao;
 	
 	@Autowired
-	private PassengersDao passengersDao;
-	
-	@Autowired
 	private ModelMapper mapper;
 	
 	@Autowired
 	private RailwayTicketUtils railwayTicketUtils;
 	
+
 	@Override
-	public BookingModel doBooking(BookingModel bookingModel) {
-		return bookingModel;
+	public List<TrainModel> fetchTrains(TrainModel trainRequest) throws Exception {
+		try {
+			Optional<List<Train>> trainsList = trainDao.findBySourceStationInAndDestinationStationIn(
+					Collections.singletonList(trainRequest.getSourceStation()),
+					Collections.singletonList(trainRequest.getDestinationStation()));
+			
+			if(!trainsList.isPresent() || trainsList.get().isEmpty()) {
+				throw new RailwayException("We don't have any trains from "+ trainRequest.getSourceStation()+" to "+trainRequest.getDestinationStation(),
+						HttpStatus.NOT_FOUND.value());
+			}
+			
+			trainsList.get().forEach(list -> log.info(list.toString()));
+			
+			return trainsList.get().stream()
+					.map(train -> mapper.map(train, TrainModel.class)).toList();
+			
+		}catch (RailwayException e) {
+		     throw new RailwayException(e.getMessage(), e.getStatusCode());
+		}catch (Exception ex) {
+			throw new Exception("Error occurred during fetchTrains: " + ex.getMessage());
 		}
-
-	@Override
-	public List<TrainModel> fetchTrains(TrainModel trainRequest) {
-
-		List<Train> trainsList = trainDao.findBySourceStationInAndDestinationStationIn(
-				Collections.singletonList(trainRequest.getSourceStation()),
-				Collections.singletonList(trainRequest.getDestinationStation()))
-				.get();
 		
-		trainsList.forEach(System.out::println);
-		
-		return trainsList.stream()
-				.map(train -> mapper.map(train, TrainModel.class))
-				.collect(Collectors.toList());
 	}
 
 	@Override
-	public BookingModel doBooking_1(BookingRequestModel bookingRequestModel) throws Exception {
-		System.out.println("BookingServiceImpl -- doBooking_1 --  bookingRequestModel.toString() " + bookingRequestModel.toString());
-
+	public BookingModel doBooking(BookingRequestModel bookingRequestModel) throws Exception {
+		log.info("BookingServiceImpl -- doBooking_1 --  bookingRequestModel.toString() " + bookingRequestModel.toString());
+		
 		try {
 			UserProfile  currentUserProfile = railwayTicketUtils.getUserProfileDetails();
-			System.out.println("BookingServiceImpl -- doBooking_1  currentUserProfile  ->"+ currentUserProfile);
+			log.info("BookingServiceImpl -- doBooking_1  currentUserProfile  ->"+ currentUserProfile);
 			
 			List<Passenger> passengerList = setSeatNumberMethod(
 					bookingRequestModel.getTrain(),
 					bookingRequestModel.getPassenger());
-			passengerList.forEach(n ->{
-				System.out.println("BookingServiceImpl -- doBooking_1 - passengerList > "+n);
-			});
+			
+			passengerList.forEach(n ->log.info("BookingServiceImpl -- doBooking_1 - passengerList > "+n));
+			
+			Train trainGetById= trainDao.findById(bookingRequestModel.getTrain().getTrainId()).get();
 			
 			
-			// UI can take care of this validation
-			if(bookingRequestModel.getTrain().getAvailableSeats() <= passengerList.size()) {
-				throw new Exception("Seats not available");
-			}
-			
-			Train trainGetById= trainDao.findById(bookingRequestModel.getTrain().getTrainId())
-					.orElseThrow(() -> new EntityNotFoundException("Train not found with id: " +
-	                        bookingRequestModel.getTrain().getTrainId()));
-			
-			//List<Passenger>  passLiest = passengersDao.saveAll(passengerList);
-			
-		
-			//Fist we are saving Ticket details in DB
 			Ticket ticket = Ticket.builder()
 					.train(trainGetById)
-				//	.userProfile(currentUserProfile)
 					.passengers(passengerList)
 					.build(); 
 			
-			//Ticket tik =  ticketDao.save(ticket);
-			
-			/*passengerList.stream().forEach(n -> {
-				//n.setTicket(ticket);
-				tik.getPassengers().add(n);
-				passengersDao.save(n);
-			});*/
-			
-			
-			//Prepare Booking object 
 			Booking bookingDetails = Booking.builder()
 					.userProfile(currentUserProfile)
-					//.train(trainGetById)
 					.bookingDate(bookingRequestModel.getBookingDate())
 					.ticket(ticket)
 					.build();
 			
+			//This *save* will insert Passengers, Ticket & Booking also
 			Booking bookingResponse = bookingDao.save(bookingDetails);
-			System.out.println("BookingServiceImpl -- doBooking_1 - bookingResponse -> "+bookingResponse.toString());
+			
+			log.info("BookingServiceImpl -- doBooking_1 - bookingResponse -> "+bookingResponse.toString());
 			
 			return BookingModel.builder()
 					.bookingId(bookingResponse.getBookingId())
@@ -132,24 +114,33 @@ public class BookingServiceImpl implements BookingService {
 					.bookingDate(bookingResponse.getBookingDate())
 					.status("Completed")
 					.build();
-		}catch (EntityNotFoundException ex) {
-	        ex.printStackTrace();
-	        throw new Exception("Error occurred during booking: " + ex.getMessage());
-	    }
+			
+		}catch (RailwayException e) {
+		     throw new RailwayException(e.getMessage(), e.getStatusCode());
+		}catch (Exception ex) {
+			throw new Exception("Error occurred during booking: " + ex.getMessage());
+		}
+
 		
 	}
 
 	private List<Passenger> setSeatNumberMethod(
 			Train train, 
-			List<Passenger> passengers) {
+			List<Passenger> passengers) throws Exception {
 
 		//get passengers list with train details if any ticket is booked for that train previously
 		List<Passenger> resultPass =  ticketDao.findPassengersByTrain(train);
 		
-		System.out.println("BookingServiceImpl - setSeatNumberMethod  - resultPass > ");
-		resultPass.forEach(System.out::println);
+		// UI can take care of this validation
+		if(train.getAvailableSeats() <= passengers.size()) {
+			throw new Exception("Seats not available");
+		}
+					
 		
-		//Incrementing seat numbers on basses of getting list of passengers with seatnumbers
+		log.info("BookingServiceImpl - setSeatNumberMethod  - resultPass > ");
+		resultPass.forEach(res -> log.info(res.toString()));
+		
+		//Incrementing seat numbers on basses of number of passengers came as input
 		/*
 		  already that train has 3 passengers > ticketDao.findPassengersByTrain
 		  new passengers which came as input to this method which will be resulted with 4,5,6,..
@@ -161,7 +152,7 @@ public class BookingServiceImpl implements BookingService {
 				Passenger pass = passengers.get(index);
 				Integer maxSeatNumber = 1;
 				
-				if(resultPass.size() > 0) {
+				if(!resultPass.isEmpty()) {
 					// will get maxSeatNumber from resultPass -> 3
 					maxSeatNumber = resultPass.stream().max(Comparator.comparing(Passenger::getSeatNumber)).get().getSeatNumber();
 					maxSeatNumber++;
@@ -169,6 +160,6 @@ public class BookingServiceImpl implements BookingService {
 				
 				pass.setSeatNumber(maxSeatNumber+index);
 				return pass;
-			}).collect(Collectors.toList());
+			}).toList();
 	}
 }
